Added authlogic for authentication.  First save.  Not working yet...

--- a/app/views/shared/_page_header.html.slim
+++ b/app/views/shared/_page_header.html.slim
@@ -17,7 +17,7 @@ nav class="navbar navbar-default"
         li
           a href="#" Trees
         li
-          a href="#" Users
+          = link_to "Users", users_path
         li
           a href="#" 
             span class="glyphicon glyphicon-log-out logout-icon" aria-hidden="true"
