--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,5 +6,5 @@ html
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   body
-    = render 'shared/page_header'
+    = render 'shared/page_header' unless (params[:controller] == 'user_sessions')
     = yield
