--- a/app/views/shared/_page_header.html.slim
+++ b/app/views/shared/_page_header.html.slim
@@ -11,7 +11,7 @@ nav class="navbar navbar-default"
     div class="collapse navbar-collapse" id="navlinks"
       ul class="nav navbar-nav navbar-right"
         li
-          = link_to "Home", root_path
+          = link_to "Home", home_path
         li
           a href="#" Plantings
         li
@@ -19,6 +19,6 @@ nav class="navbar navbar-default"
         li
           = link_to "Users", users_path
         li
-          a href="#" 
+          = link_to(logout_path) do 
             span class="glyphicon glyphicon-log-out logout-icon" aria-hidden="true"
 /! page header end
