Added flash message to view.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,4 +7,6 @@ html
     = csrf_meta_tags
   body
     = render 'shared/page_header' unless (params[:controller] == 'user_sessions')
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: name
     = yield
