--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,10 @@ html
     = csrf_meta_tags
   body
     = render 'shared/page_header' unless (params[:controller] == 'user_sessions')
-    - flash.each do |name, msg|
-      = content_tag :div, msg, class: name
+    - if flash.any?
+      div class="container"
+        div class="row"
+          div class="well" id="flash-msg"
+            - flash.each do |name, msg|
+              = content_tag :strong, msg, class: name
     = yield
