Logo in header should link to homepage.

--- a/app/views/shared/_page_header.html.slim
+++ b/app/views/shared/_page_header.html.slim
@@ -7,7 +7,7 @@ nav class="navbar navbar-default"
         span class="icon-bar"
         span class="icon-bar"
         span class="icon-bar"
-      = link_to image_tag("rt_logo_web_header.png", :alt => "Richmond Trees Logo", height: "50px"), root_path, class: "navbar-brand" 
+      = link_to image_tag("rt_logo_web_header.png", :alt => "Richmond Trees Logo", height: "50px"), home_path, class: "navbar-brand" 
     div class="collapse navbar-collapse" id="navlinks"
       ul class="nav navbar-nav navbar-right"
         li
