--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,5 +1,9 @@
-h1 New user
-
-== render 'form'
-
-= link_to 'Back', users_path
+div class="container-fluid"
+  div class="row"
+    div class="col-xs-12"
+      h2 class="header-inline"
+        | Create a New User
+  br
+  == render 'form'
+  br
+  = link_to 'Back', users_path
