--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,19 +1,38 @@
-h1 Listing users
+div class="container-fluid"
+  div class="row"
+    div class="col-xs-8 col-md-10" 
+      h2 class="header-inline"
+        | Users
+      medium
+        | (&nbsp;
+        = @users.count
+        | &nbsp;total&nbsp;)
+    div class="col-xs-4 col-md-2"
+      div class="text-right"
+        | (&nbsp;
+        = link_to 'Create New User', new_user_path, class: "text-right"
+        | &nbsp;)
+  br
+  div class="row"
+    div class="col-xs-12"
+      div class="table-responsive"
+        table class="table table-hover"
+          thead
+            tr
+              th Username
+              th Created On
+              th Last Login
+              th Actions
 
-table
-  thead
-    tr
-      th
-      th
-      th
-
-  tbody
-    - @users.each do |user|
-      tr
-        td = link_to 'Show', user
-        td = link_to 'Edit', edit_user_path(user)
-        td = link_to 'Destroy', user, data: {:confirm => 'Are you sure?'}, :method => :delete
-
-br
-
-= link_to 'New User', new_user_path
+          tbody
+            - @users.each do |user|
+              tr
+                td = user.username
+                td = user.created_at
+                td = user.last_login_at
+                td
+                  = link_to 'Details', user
+                  | &nbsp;
+                  = link_to 'Edit', edit_user_path(user)
+                  | &nbsp;
+                  = link_to 'Delete', user, data: {:confirm => 'Are you sure?'}, :method => :delete
