--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,6 +1,41 @@
-p#notice = notice
-
-
-= link_to 'Edit', edit_user_path(@user)
-'|
-= link_to 'Back', users_path
+div class="container-fluid"
+  div class="row"
+    div class="col-xs-8 col-md-10" 
+      h2 class="header-inline" 
+        | User Details
+  br
+  div class="row"
+    div class="col-xs-4 col-md-2 text-right" 
+      strong Username
+    div class="col-xs-8 col-md-4" 
+      = @user.username
+  div class="row"
+    div class="col-xs-4 col-md-2 text-right" 
+      strong Email
+    div class="col-xs-8 col-md-4" 
+      = @user.email
+  div class="row"
+    div class="col-xs-4 col-md-2 text-right" 
+      strong Created On
+    div class="col-xs-8 col-md-4" 
+      = @user.created_at
+  div class="row"
+    div class="col-xs-4 col-md-2 text-right" 
+      strong Login Count
+    div class="col-xs-8 col-md-4" 
+      = @user.login_count
+  div class="row"
+    div class="col-xs-4 col-md-2 text-right" 
+      strong Last Login
+    div class="col-xs-8 col-md-4" 
+      = @user.last_login_at
+  div class="row"
+    div class="col-xs-4 col-md-2 text-right" 
+      strong Last Login IP
+    div class="col-xs-8 col-md-4" 
+      = @user.last_login_ip  
+  div class="row"
+    div class="col-xs-4 col-md-2 text-right"      
+      = link_to 'Edit', edit_user_path(@user)
+      | &nbsp;|&nbsp;
+      = link_to 'Back', users_path
