Added Tree object and corresponding CRUD operations.

--- a/app/views/shared/_page_header.html.slim
+++ b/app/views/shared/_page_header.html.slim
@@ -15,7 +15,7 @@ nav class="navbar navbar-default"
         li
           a href="#" Plantings
         li
-          a href="#" Trees
+          = link_to "Trees", trees_path
         li
           = link_to "Users", users_path
         li
