Minor layout fix to fix issue that appears on heroku...

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,6 +77,7 @@ $state-danger-text: $danger-text-color;
 
 .header-inline {
 	display: inline;
+	padding-right: 10px;
 }
 
 /* Add an asterisk to required fields */
