--- a/app/views/adoption_requests/new.html.slim
+++ b/app/views/adoption_requests/new.html.slim
@@ -1,5 +1,9 @@
-h1 New adoption_request
-
-== render 'form'
-
-= link_to 'Back', adoption_requests_path
+div class="container-fluid"
+  div class="row"
+    div class="col-xs-12"
+      h2 class="header-inline"
+        | Add an Adoption Request
+  br
+  == render 'form'
+  br
+  = link_to 'Back', adoption_requests_path
