--- a/app/views/plantings/new.html.slim
+++ b/app/views/plantings/new.html.slim
@@ -1,5 +1,9 @@
-h1 New planting
-
-== render 'form'
-
-= link_to 'Back', plantings_path
+div class="container-fluid"
+  div class="row"
+    div class="col-xs-12"
+      h2 class="header-inline"
+        | Add a Planting
+  br
+  == render 'form'
+  br
+  = link_to 'Back', plantings_path
