Maintenance records are displayed on its planting's detail page.

--- a/app/views/maintenance_records/new.html.slim
+++ b/app/views/maintenance_records/new.html.slim
@@ -6,4 +6,4 @@ div class="container-fluid"
   br
   == render 'form'
   br
-  = link_to 'Back', maintenance_records_path
+  = link_to 'Back', :controller => "plantings", :action => "show", :id => @planting_id
