--- a/app/views/plantings/index.html.slim
+++ b/app/views/plantings/index.html.slim
@@ -43,4 +43,4 @@ div class="container-fluid"
                   | &nbsp;|&nbsp;
                   = link_to 'Edit', edit_planting_path(planting)
                   | &nbsp;|&nbsp;
-                  = link_to 'Destroy', planting, data: {:confirm => 'Are you sure?'}, :method => :delete
+                  = link_to 'Delete', planting, data: {:confirm => 'Are you sure?'}, :method => :delete
