--- a/app/views/trees/index.html.slim
+++ b/app/views/trees/index.html.slim
@@ -36,4 +36,4 @@ div class="container-fluid"
                   | &nbsp;|&nbsp;
                   = link_to 'Edit', edit_tree_path(tree)
                   | &nbsp;|&nbsp;
-                  = link_to 'Destroy', tree, data: {:confirm => 'Are you sure?'}, :method => :delete
+                  = link_to 'Delete', tree, data: {:confirm => 'Are you sure?'}, :method => :delete
