--- a/app/views/maintenance_records/index.html.slim
+++ b/app/views/maintenance_records/index.html.slim
@@ -12,7 +12,7 @@ table
       tr
         td = link_to 'Show', maintenance_record
         td = link_to 'Edit', edit_maintenance_record_path(maintenance_record)
-        td = link_to 'Destroy', maintenance_record, data: {:confirm => 'Are you sure?'}, :method => :delete
+        td = link_to 'Delete', maintenance_record, data: {:confirm => 'Are you sure?'}, :method => :delete
 
 br
 
