--- a/app/views/notes/index.html.slim
+++ b/app/views/notes/index.html.slim
@@ -12,7 +12,7 @@ table
       tr
         td = link_to 'Show', note
         td = link_to 'Edit', edit_note_path(note)
-        td = link_to 'Destroy', note, data: {:confirm => 'Are you sure?'}, :method => :delete
+        td = link_to 'Delete', note, data: {:confirm => 'Are you sure?'}, :method => :delete
 
 br
 
