Use standard active record associations to reference the user that created a note.

--- a/app/views/plantings/show.html.slim
+++ b/app/views/plantings/show.html.slim
@@ -107,7 +107,7 @@ div class="container-fluid"
           tbody
             - @notes.each do |note|
               tr
-                td = note.created_by_name
+                td = note.created_by.full_name
                 td = note.created_at
                 td = note.note
                 td
