Added planting report results page and backend logic.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@ $state-danger-text: $danger-text-color;
 @import "homepage.css.scss";
 @import "user_session.css.scss";
 @import "user.css.scss";
+@import "reports.css.scss";
 
 /*** manual bootstrap overrides ***/
 
